# rationL

./: .gitignore  Makefile.am  README.md  annotated.html  annotated_dup.js  bootstrap  classes.html  configure.ac  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  get__started_8md.html  get_started.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  mainpage_8md.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  rationl.pc.in  rationl_8h.html  rationl_8h.js  rationl_8h__incl.dot  rationl_8h_source.html  structmatch.html  structmatch.js  structreg__t.html  structreg__t.js
.github/workflows/: main.yml  release.yml
docs/: Doxyfile.in  DoxyfileInternal.in  DoxyfilePublic.in  Makefile.am  get_started.md  mainpage.md
docs/man/: regex_compile.md  regex_free.man  regex_match.man  regex_match.md  regex_search.man  regex_search.md  regex_sub.man  regex_sub.md
include/: Makefile.am  rationl.h
include/rationl/: automaton.h  lexer.h  matching.h  parsing.h  thompson.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: rationl.c
src/automaton/: automaton.c  automaton.h  delete_eps.c  delete_eps.h  determine.c  determine.h  minimization.c  minimization.h  prune.c  prune.h  stringify.c  stringify.h  thompson.c  thompson.h
src/datatypes/: array.c  array.h  bin_tree.c  bin_tree.h  linked_list.c  linked_list.h  map.c  map.h  matrix.c  matrix.h
src/matching/: matching.c  matching.h
src/parsing/: lexer.c  lexer.h  lexer.lo  parsing.c  parsing.h
src/utils/: errors.c  errors.h  memory_utils.c  memory_utils.h
test/: Makefile.am  array_test.c  automaton_test.c  bin_tree_test.c  daut_test.c  lexer_test.c  linked_list_test.c  matching_test.c  parsing_test.c  parsing_test_escaped_characters.c  parsing_test_exists.c  parsing_test_kleene_star.c  parsing_test_maybe.c  parsing_test_paranthesis_combinaision.c  parsing_test_paranthesis_nested.c  parsing_test_paranthesis_simple.c  parsing_test_union_and_concatenation.c  parsing_test_union_or_concatenation.c  simple.c  test_utils.c  test_utils.h  thompson_test.c
test/array/: array_test.c
test/automaton/: (a(b(c))).daut  (a|bb)ab.daut  a*(bc)?.daut  a*.daut  abcdabd.daut  abstara.daut  automaton_test.c  basic_test.daut  build_search_dfa_test.c  cursed.daut  daut_test.c  delete_eps_test.c  determine_test.c  entering_eps.daut  hardcore_el.daut  jump_leaving.daut  matching_test.c  minimization_test.c  multiple.daut  multiple_check_delete.daut  prune_test.c  res.daut  simple_3_states.daut  single_check_delete.daut  stringify_test.c  sum_mod_3.daut  thompson_test.c  utils.c  utils.h
test/automaton/determine_daut/: ((a(b|c))a).daut  ((a(b|c))a)_determined.daut  a?b*a.daut  a?b*a_determined.daut  a_end.daut  a_end_determined.daut
test/automaton/prune_daut/: after_end.daut  func.daut  no_escape.daut  perfect.daut  rostan.daut  star.daut  strange_state.daut
test/automaton/search_dfa_daut/: (a|bb)ab.daut  abcdabd.daut
test/bin_tree/: bin_tree_test.c
test/daut_files/: abba.daut
test/interface/: interface_test.c
test/lexer/: lexer_test.c
test/linked_list/: linked_list_test.c
test/map/: map_test.c
test/matrix/: matrix_test.c
test/parsing/: binary_basics.c  binary_more.c  escaped_characters.c  groups.c  paranthesis_basics.c  paranthesis_more.c  paranthesis_nested.c  paranthesis_unary.c  paranthesis_unary_more.c  parsing_test.c  parsing_test_kleene_star.c  parsing_test_paranthesis_combinaision.c  parsing_test_paranthesis_simple.c  parsing_test_union_or_concatenation.c  unary_basics.c
test/parsing/dotfiles/: .dot  a.dot  a_dot_b.dot  a_escaped_exists.dot  a_escaped_maybe.dot  a_escaped_star.dot  a_escaped_start.dot  a_left_b_or_c_right.dot  a_left_b_right.dot  a_left_b_right_star.dot  a_left_bc_right.dot  a_left_bc_right_star.dot  a_left_bcd_right.dot  a_left_bcd_right_star.dot  a_or_b.dot  a_or_b_or_c.dot  a_or_b_star.dot  a_or_b_star_c.dot  a_or_bc.dot  a_or_bc_or_d.dot  a_or_bcd.dot  a_or_left_b_left_c_or_d_right_star_right.dot  a_or_left_b_or_c_right.dot  a_or_left_b_right_star.dot  a_or_left_bc_right.dot  a_or_left_bc_right_star.dot  a_or_left_bcd_right.dot  a_or_left_left_b_or_c_right_d_right.dot  a_or_left_left_b_star_right_or_c_right.dot  a_pipe_b.dot  a_star.dot  a_star_b.dot  a_star_left_bc_right_star.dot  a_star_or_b.dot  ab.dot  ab_or_c.dot  ab_or_c_or_d.dot  ab_or_cd.dot  ab_star.dot  abc.dot  (+37 more)
test/test_files/: a+b.daut  ab+cstar.daut
